--- a/src/index.njk
+++ b/src/index.njk
@@ -17,8 +17,8 @@ subheading: A resource for all those seeking a spiritual awakening as a result o
   </div>
 </section>
 
-<section class="py-10 even bg-slate-100">
+{# <section class="py-10 even bg-slate-100">
   <div class="container mx-auto">
     <h2 class="lg:text-4xl text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
   </div>
-</section>
+</section> #}
