Update contact link in nav

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -16,7 +16,7 @@
           <a href="/search" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Search Recovery Literature</a>
         </li>
         <li>
-          <a href="/contact" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Contact</a>
+          <a href="mailto:hello@conscious.contact" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Contact</a>
         </li>
       </ul>
     </div>
