Update links to end with slash

--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -13,7 +13,7 @@
     <div class="self-end font-bold">
       <ul class="flex flex-col lg:p-4 md:p-0 lg:my-4 md:flex-row md:space-x-8">
         <li>
-          <a href="/search" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Search Recovery Literature</a>
+          <a href="/search/" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Search Recovery Literature</a>
         </li>
         <li>
           <a href="mailto:hello@conscious.contact" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Contact</a>
