--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,6 +1,6 @@
 <nav>
   <div class="flex flex-wrap items-center justify-between mx-auto">
-    <a href="/" class="flex items-center mt-4 mb-5 self-end">
+    <a href="/" class="flex items-center self-center">
         <img src="/assets/img/cc.svg" class="mr-3" alt="Logo" style="max-width: 100px; height: 34px;" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap">Conscious Contact</span>
     </a>
