Responsive home layout

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ subheading: A resource for all those seeking a spiritual awakening as a result o
 
 <section class="py-10 lg:py-24 odd">
   <div class="text-center mx-auto max-w-7xl px-6 lg:px-8">
-    <h2 class="text-2xl font-semibold"><a href="/search/" class="underline underline-offset-4">Search the literature</a> from these 12-step fellowships</h2>
+    <h2 class="text-xl md:text-2xl font-semibold"><a href="/search/" class="underline underline-offset-2 md:underline-offset-8">Search the recovery literature</a> from these 12-step fellowships</h2>
     <div class="">
       <a href="https://aa.org"><img class="inline-block max-h-16 lg:max-h-24 m-4 lg:m-8 object-contain" src="/assets/img/logo-AA.svg" alt="Alcoholics Anonymous" data-attribution="By Anamix - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=37930268"></a>
       <a href="https://na.org"><img class="inline-block max-h-16 lg:max-h-24 m-4 lg:m-8 object-contain" src="/assets/img/logo-NA.svg" alt="Narcotics Anonymous" data-attribution="By Jimmy Kinnon - Unknown source, Public Domain, https://commons.wikimedia.org/w/index.php?curid=63299955"></a>
