--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,24 +1,26 @@
 <nav>
-  <div class="flex flex-wrap items-center justify-between mx-auto">
-    <a href="/" class="flex items-center self-center">
-        <img src="/assets/img/cc.svg" class="mr-3" alt="Logo" style="max-width: 100px; height: 34px;" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap">Conscious Contact</span>
+  <div class="flex flex-wrap items-center justify-between mx-auto mb-8 lg:mb-10">
+    <a href="/" class="flex items-center self-center mr-8 md:mr-0">
+        <img src="/assets/img/cc.svg" class="mr-3 w-8 md:w-12" alt="Logo" />
+        <span class="self-center text-xl md:text-2xl font-semibold whitespace-nowrap">Conscious Contact</span>
     </a>
-    {# <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button> #}
     <div class="self-end font-bold">
-      <ul class="flex flex-col lg:p-4 md:p-0 lg:my-4 md:flex-row md:space-x-8">
+      <ul class="flex flex-row space-x-4 md:space-x-8">
         <li>
-          <a href="/search/" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Search Recovery Literature</a>
+          <a href="/search/" class="inline-block p-1 pl-0 md:p-2 md:pr-0">Search</a>
         </li>
         <li>
-          <a href="mailto:hello@conscious.contact" class="lg:block lg:py-2 lg:pl-3 lg:pr-4">Contact</a>
+          <a href="mailto:hello@conscious.contact" class="inline-block p-1 pl-0 md:p-2 md:pr-0">Contact</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+
+{# <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+    <span class="sr-only">Open main menu</span>
+    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+    </svg>
+</button> #}
