--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -2,12 +2,12 @@
 layout: base
 ---
 
-<header class="text-white px-6 pt-4 pb-10 lg:p-0" style="background-image: linear-gradient(to bottom, rgba(0,119,151,.5), rgba(0,119,151,0) 35%), url(/assets/img/header.jpg);">
+<header class="text-white p-6 md:p-8 lg:p-10" style="background-image: linear-gradient(to bottom, rgba(0,119,151,.5), rgba(0,119,151,0) 35%), url(/assets/img/header.jpg);">
   <div class="container mx-auto">
     {% include "../_includes/nav.njk" %}
-    <div class="text-center lg:py-52 lg:px-28">
-      <h1 class="text-4xl lg:text-8xl font-bold drop-shadow-lg">{{heading}}</h1>
-      <p class="lg:text-2xl lg:mt-6 lg:p-4">{{subheading}}</p>
+    <div class="text-center py-32 px-4 sm:px-8 md:py-52 md:px-20">
+      <h1 class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl my-6 md:my-8 font-bold drop-shadow text-balance">{{heading}}</h1>
+      <p class="text-xl md:text-2xl md:mt-6 my-6 md:my-8 drop-shadow text-balance">{{subheading}}</p>
     </div>
   </div>
 </header>
