--- a/src/_includes/nav.njk
+++ b/src/_includes/nav.njk
@@ -1,5 +1,5 @@
 <nav>
-  <div class="flex flex-wrap items-center justify-between mx-auto mb-8 lg:mb-10">
+  <div class="flex flex-wrap items-center justify-between mx-auto">
     <a href="/" class="flex items-center self-center mr-8 md:mr-0">
         <img src="/assets/img/cc.svg" class="mr-3 w-8 md:w-12" alt="Logo" />
         <span class="self-center text-xl md:text-2xl font-semibold whitespace-nowrap">Conscious Contact</span>
