--- a/src/_layouts/search.njk
+++ b/src/_layouts/search.njk
@@ -2,8 +2,8 @@
 layout: base
 ---
 
-<header class="text-white bg-slate-800">
-  <div class="container mx-auto mb-10">
+<header class="text-white p-6 md:p-8 lg:p-10 bg-slate-800">
+  <div class="container mx-auto">
     {% include "../_includes/nav.njk" %}
   </div>
 </header>
@@ -44,7 +44,7 @@ layout: base
 }
 </style>
 <main>
-  <div class="container mx-auto">
+  <div class="container mx-auto py-10">
     {{content | safe}}
   </div>
 </main>
