Update Algolia approach, templating

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -8,10 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Petrona:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@8.1.0/themes/satellite-min.css">
     <title>{{title}} - Conscious Contact</title>
   </head>
-  <body class="font-roboto">
+  <body class="font-roboto text-neutral-800">
     {{content | safe}}
   </body>
 </html>
