--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -5,9 +5,23 @@
   margin: 0;
   padding: 0;
 }
-
 html {
   scroll-behavior: smooth;
+}
+.ais-CurrentRefinements {
+  @apply mb-4
+}
+.ais-CurrentRefinements--noRefinement {
+  @apply h-0 mb-0
+}
+.ais-ClearRefinements-button, .ais-ClearRefinements-button:hover {
+  all: unset;
+}
+.ais-ClearRefinements-button {
+  @apply bg-slate-500 rounded-full p-2 h-max
+}
+.ais-ClearRefinements-button:hover {
+  @apply bg-slate-100
 }
 
 @tailwind base;
