--- a/src/search.njk
+++ b/src/search.njk
@@ -3,15 +3,33 @@ layout: search
 title: Search Recovery Literature
 ---
 
-<div class="search-panel">
-  <div class="search-panel__filters">
-    <h2>Books</h2>
-    <div id="refinement"></div>
+<div class="search-panel flex flex-col md:flex-row">
+  <div 
+    class="mb-4 md:shrink md:min-w-36 lg:min-w-48 md:mr-8"
+    x-data="{ open: true }">
+    <div class="">
+      <button type="button" class="font-bold text-sm bg-white outline outline-1 outline-slate-500 rounded px-3 py-2" x-on:click="open = ! open">
+        Filter Results by Book
+        <svg class="inline-block w-4 h-4 align-text-bottom" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor">
+          <path class="stroke-2" strokeLinecap="round" strokeLinejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
+        </svg>
+      </button>
+    </div>
+    <div
+      class="search-panel__filters mt-4"
+      :class="open ? '' : 'hidden'"
+>
+      <div id="refinement-list"></div>
+    </div>
   </div>
 
-  <div class="search-panel__results">
-    <div id="searchbox"></div>
-    <div id="hits"></div>
+  <div class="search-panel__results md:grow">
+    <div id="searchbox" class="mb-4"></div>
+    <div class="flex">
+      <div id="current-refinements"></div>
+      <div id="clear-refinements"></div>
+    </div>
+    <div id="hits" class="mb-4"></div>
     <div id="pagination"></div>
   </div>
 </div>
