chore: add meta descriptions

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -13,6 +13,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.74.1/dist/instantsearch.production.min.js" integrity="sha256-r98rA6Km17Ca3hB+9LKS2ywAZuv/6+X0oF6h1iRTlqs=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
     <title>{{title}} - Conscious Contact</title>
+    <meta name="description" content="{{metaDescription}}">
   </head>
   <body class="font-roboto text-neutral-800">
     {{content | safe}}
