--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,7 @@ layout: home
 title: Home
 heading: Sought to improve our conscious contact with God
 subheading: A resource for all those seeking a spiritual awakening as a result of working the 12 steps
+metaDescription: A dedicated resource for those seeking a spiritual awakening through the 12 steps. Search the Big Book and other fellowship literature to deepen your conscious contact.
 ---
 
 <section class="py-10 lg:py-24 odd">
