--- a/src/search.njk
+++ b/src/search.njk
@@ -1,6 +1,7 @@
 ---
 layout: search
 title: Search Recovery Literature
+metaDescription: Search 12-step recovery literature. Quickly find specific passages, topics, or inspiration from Alcoholics Anonymous, Narcotics Anonymous, and Sexaholics Anonymous literature.
 ---
 
 <div class="search-panel flex flex-col md:flex-row">
